client/src/components/Header/Header.scss
@import '../../partials/_general';
a {
  text-decoration: none;
};


.navbar {
  background-color: $graphite;
  padding: 0 5%;

  @include tablet {
    display: flex;
    padding:  0 4.25%;
    justify-content: space-between;
  }

  @include desktop {
    padding: 0 10.85%;
  }
  
  &__image {
    display: flex;
    justify-content: center;
    padding:30px 0 24px 0;

    @include tablet {
      padding: 38px 0 130px 0;
    }
  };

  &__container {
    display: flex;
    justify-content: space-between;
    align-items: center;

    &-link {
      font-family: "TitilliumWeb";
      font-style: normal;
      font-weight: 600;
      font-size: .8125rem;
      line-height: 20px;
      margin: 0px 0px 88px 0px;
      color: $cloud;
      padding-right: 30px;
      
      

      &:hover {
        text-decoration: underline;
      }

      @include tablet {
        padding: 0;
      }
    };

    &-active{
      @extend .navbar__container-link;
      color: $white;
      border: 1px none white;
      border-radius: 20px;
      background-color: $black;
      padding: 8px 48px;
      
      @include tablet {
        padding:8px 16px;
        margin-right: 24px;
      }
    };
  };   
};

.foot {
  background-color: $gray-lt;
  

    &__copyright {
      display: flex;
      font-family: 'TitilliumWeb';
      font-style: normal;
      font-weight: normal;
      font-size: .6875rem;
      line-height: 16px;
      padding: 350px 0 40px 0;
      margin: 0;
      color: $slate;
      text-align: center;
      display: flex;
      justify-content: center;
    }
};

